<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.app.aunal.firstassignmenta.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textViewBackground"
        android:fontFamily="monospace"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="40sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="beginning"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_2"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_3"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/substract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/operatorBackground"
            android:text="@string/sub"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/firstLinear"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_4"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_5"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_6"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/operatorBackground"
            android:text="@string/x"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/secondLinear"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_7"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_8"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nine"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_9"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/operatorBackground"
            android:text="@string/div"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/thirdLinear"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/numberBackground"
            android:text="@string/point"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/equalBackground"
            android:text="@string/equal"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/operatorBackground"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fourthLinear"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <Button
            android:id="@+id/backSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/otherBackground"
            android:text="@string/bckspc"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/otherBackground"
            android:text="@string/cla"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/otherBackground"
            android:text="@string/power"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/otherBackground"
            android:text="@string/root"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
